<resources>
    <string name="app_name">Emploi du temps</string>
    <string name="lundi">Lundi</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="err_connection">Pas de connexion internet</string>
    <string name="err_chargement">Erreur de chargement, les données ne sont peut-être pas à jour</string>
    <string name="min_date_calendar">09/01/2025</string>
    <string name="max_date_calendar">08/31/2026</string>
    <string name="mise_a_jour">Une nouvelle version est disponible, allez dans les paramètres pour mettre à jour</string>
    <string name="bandeau">Bandeau</string>
    <string name="cours">Cours</string>
    <string name="sae">SAE</string>
    <string name="aujourdhui">Fond d\'aujourd\'hui</string>
    <string name="texteBandeau">Texte du bandeau</string>
    <string name="texteCours">Texte des cours</string>
    <string name="texteSae">Texte des SAE</string>
    <string name="parametres">Paramètres</string>
    <string name="annuler">Annuler</string>
    <string name="confirmer">Confirmer</string>
    <string name="quitter">Quitter</string>
    <string name="quitter_message">Êtes-vous sûr de vouloir quitter sans sauvegarder ?</string>
    <string name="support">Un avis, une suggestion, un problème ?</string>
    <string name="support_bug">Signaler un bug</string>
    <string name="support_discussion">Partager un avis</string>
    <string name="support_releases">Voir les dernières versions</string>

    <string name="gitUrl" translatable="false">https://github.com/Max7512/EmploiDuTempsIutMetz</string>
</resources>