<?xml version="1.0" encoding="utf-8"?>
<com.otaliastudios.zoom.ZoomLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:scrollbars="vertical|horizontal"
    android:theme="@style/Base.Theme.Affichage"
    app:alignment="center"
    app:maxZoom="2.5"
    app:maxZoomType="zoom"
    app:minZoom="1"
    app:minZoomType="zoom"
    app:oneFingerScrollEnabled="true"
    app:overPinchable="true"
    app:overScrollHorizontal="true"
    app:overScrollVertical="true"
    app:scrollEnabled="true"
    app:threeFingersScrollEnabled="true"
    app:transformation="centerInside"
    app:transformationGravity="auto"
    app:twoFingersScrollEnabled="true"
    app:verticalPanEnabled="true"
    app:zoomEnabled="true">

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:gravity="center_horizontal"
            android:tag="day"
            android:text="@string/lundi"
            android:textSize="10sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:gravity="center_horizontal"
            android:tag="day"
            android:text="@string/mardi"
            android:textSize="10sp" />


        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:gravity="center_horizontal"
            android:tag="day"
            android:text="@string/mercredi"
            android:textSize="10sp" />


        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:gravity="center_horizontal"
            android:tag="day"
            android:text="@string/jeudi"
            android:textSize="10sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:gravity="center_horizontal"
            android:tag="day"
            android:text="@string/vendredi"
            android:textSize="10sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_column="6"
            android:gravity="center_horizontal"
            android:tag="day"
            android:text="@string/samedi"
            android:textSize="10sp" />
    </GridLayout>
</com.otaliastudios.zoom.ZoomLayout>